
syntax = "proto3";

package api.v1;

option go_package = "pkg/api";

message DEConfig {
  int64 executions = 1;
  int64 generations = 2;
  int64 population_size = 3;
  int64 dimensions_size = 4;
  int64 objetives_size = 5;
  float floor_limiter = 6;
  float ceil_limiter = 7;

  oneof algorithm_config {
    GDE3Config gde3 = 8;
  }
}

message GDE3Config {
  float cr = 1;
  float f = 2;
  float p = 3;
}
